fix footer to display with no white space underneath

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+html,body,#page,header{
+  height: 100%;
+}
+
 html{
   font-family: 'Raleway', sans-serif;
   color: dimgray;
@@ -11,7 +15,7 @@ body{
   background-image:url("../images/chicagoskyline.jpg");
   background-size: cover;
   background-position: bottom center;
-  z-index: 5;
+  z-index: 10;
   position: fixed;
   height: 400px;
   width: 100%;
@@ -40,6 +44,7 @@ h2{
   padding-bottom: 30px;
   align-items: center;
   background-color: Snow;
+  min-height: calc(100% - 600px);
 }
 
 .projectlist h2{
@@ -61,6 +66,4 @@ footer{
   background-color: gray;
   width: 100%;
   height: 200px;
-  margin: auto;
-  display: flex;
 }
